fix: containerx es moviles todo: texto overflow button-default

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -357,6 +357,16 @@ a:focus {
   width: 100%;
   height: 200px;
 }
+@media{
+  .download-section .containerX{
+    height: 100%;
+    width: 90%;
+    display: inline-block;
+    border: 2px solid #A0A0A0;
+    background-color:rgba(0,0,0,0.64);
+  }
+}
+
 @media (min-width: 767px) {
   .content-section {
     padding-top: 100px;
@@ -367,7 +377,7 @@ a:focus {
   }
 
   .download-section .containerX{
-    height: 400px;
+    height: 100%;
     width: 400px;
     display: inline-block;
     border: 2px solid #A0A0A0;
@@ -397,6 +407,7 @@ a:focus {
   border: 1px solid white;
   color: white;
   background-color: transparent;
+  width:90%;
 }
 .btn-default:hover,
 .btn-default:focus {
